Copyright (c) 2002-2008 Infrae. All rights reserved.
See also LICENSE.txt

Silva changes
  
  Silva 2.1.2 (unreleased)      

    Bug fixes

      - Fixed 310589: Silva AutoTOC ignores "types to list" setting 
        when using silva sort order.

  Silva 2.1.1 (2008-12-17)

    Bug fixes
  
      - Fixed broken test

  Silva 2.1.1b4 (2008-12-09)

    Features added:

      - Back-port changes from 2.2 to let Five views/forms to set
        status message.

      - Display icons of members in tab_access, the user lookup
        screen, and group edition.

      - Add feedback on role assignement in tab_access.

    Bug fixes

      - Re-factor lookup screen design to be consistent with Silva
        SMI.

      - fixed Container/tab_edit.pt to only show one author for
        objects that are containers and content

  Silva 2.1.1b3 (2008-12-02)

    Features added:

      - Add a function sendmail which can send mail using Mailhost and
        Maildrophost in Zope 2.11 (otherwise Maildrophost is broken in
        Zope 2.11).


  Silva 2.1.1b2

    Features added:


      - Made the public page link in the tab space visible, styled as
        a tab.

      - User types can select which roles they are allowed to be
        attributed to.

      - Users can to *localized* and only be defined for a
        sub-container.

      - Middleground macro have been re-factored to a view, with
        actions on it as viewlets. Extensions can plug sub-screen on
        any tab now, without overriding any tab screen.

    Bug fixes

      - fixed 274668: multiple query parameters on relative links
        broke, because the ampersands were not properly escaped.

      - fixed 263503: adding support for relative links with query
        parameters (e.g. /path/to/object?key=value)

      - correct unauthorized error when a chief editor/manager want to
        use the access tab and he don't have any access in the Silva